--- a/Bio.html
+++ b/Bio.html
@@ -9,7 +9,7 @@
     <p> This is a test paragraph containing some bio stuff I guess </p>
     <h2> Contact Info </h2>
     <ul>
-      <li><b>Email:</b> <a href="beauforbes@gmail.com">beauforbes@gmail.com</a> </li>
+      <li><b>Email:</b> <a href="mailto:beauforbes@gmail.com">beauforbes@gmail.com</a> </li>
       <li><b>Github:</b> <a href="https://github.com/Beaubasaur">Beaubasaur</a></li>
       <li><b>Portfoli:</b> Coming Soon </li>
     </ul>
